feat: implement caching of images as well
resolves #22
