# src/main/java/no/miles/services/consultants/integrations/cvpartner/models/CVMetaData.java
@@ -1,4 +1,4 @@
-package no.miles.services.consultants.integrations.models;
+package no.miles.services.consultants.integrations.cvpartner.models;
 
 public record CVMetaData(CV cv, String preview_url, String highlight, Integer index, Integer id) {
 
